--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 </head>
 <body>
-    
+    <div id="app">
+        {{ message }}
+    </div>
+    <script type="text/javascript">
+        var app = new Vue({
+            el: "#app",
+            data: {
+                message: 'Hello Vue'
+            }
+        })
+    </script>
 </body>
 </html>
